# MatMul

./: CMakeLists.txt  LICENSE  README.md
include/: AdditionalFunc.h  ArgParser.h  ErrorHandler.h  ScalpHandler.h  ScalpOutputHandler.h  ScalpResultFormulator.h  ScalpResultValidator.h
src/: AdditionalFunc.cpp  ArgParser.cpp  ErrorHandler.cpp  ScalpHandler.cpp  ScalpOutputHandler.cpp  ScalpResultFormulator.cpp  ScalpResultValidator.cpp  main.cpp
